--- a/action.yaml
+++ b/action.yaml
@@ -2,33 +2,39 @@
 name: 'Auto Release EKS'
 description: 'Clearing namespace automatically after ns or the corresponding issue expires'
 inputs:
-  token-action:  
+  token_action:  
     description: 'The github access token'
     required: true
-  k8s-server-url:
-    description: 'The APIServer url in k8s'
+  repos:
+    description: "the repo"
     required: true
-  k8s-token:
-    description: 'The k8s access token'
+  
+  label_check:
+    description: "the label of issue which need to check"
     required: true
-  expired-time:
-    description: 'Timeout period. If the namespace or related issue exceeds the timeout period, the namespace will be cleared'
+  time_check:
+    description: ''
     required: true
-  labels:
-    description: 'The labels used to find the issue'
+  uri_notice:
+    description: "the webhook_uri which corresponding to robot"
     required: true
-    default: ''
-  exclusive:
-    description: 'The namespace to be checked is skipped'
+  label_skip:
+    description: "this action will skip check the issue which labeled label_skip"
     required: false
-    default: 'kube-system'
+    default: ""
+  time_skip:
+    description: "this time will skip check the issue which labeled label_skip"
+    required: false
+    default: ""
+  notice_type:
+    description: "the type of message which need to send to robot"
+    required: false
+    default: "markdown"
+  mentions:
+    description: "mention list"
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.token-action }}
-    - ${{ inputs.k8s-server-url }}
-    - ${{ inputs.k8s-token }}
-    - ${{ inputs.expired-time }}
-    - ${{ inputs.labels }}
-    - ${{ inputs.exclusive }}
+    - ${{ inputs.token_action }}
