--- a/action.yaml
+++ b/action.yaml
@@ -19,7 +19,7 @@ inputs:
     required: false
 runs:
   using: 'docker'
-  image: 'guguchecken/issue_bot:issue_status'
+  image: 'docker://guguchecken/issue_bot:issue_status'
   args:
     - ${{ inputs.token_action }}
     - ${{ inputs.repos }}
