--- a/action.yaml
+++ b/action.yaml
@@ -37,4 +37,4 @@ runs:
     - ${{ inputs.sender_email }}
     - ${{ inputs.token_email }}
     - ${{ inputs.receiver_emails }}
-    - ${{ input.body_message }}
+    - ${{ inputs.body_message }}
