--- a/action.yaml
+++ b/action.yaml
@@ -25,7 +25,7 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'docker://guguchecken/issue_bot:issue_status'
+  image: 'docker://guguchecken/issue_bot:issue_time'
   args:
     - ${{ inputs.token_action }}
     - ${{ inputs.repos }}
