--- a/action.yaml
+++ b/action.yaml
@@ -40,7 +40,7 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'docker://guguchecken/issue_bot:issue_status'
+  image: 'docker://guguchecken/issue_bot:issue-status-v0.0.2'
   args:
     - ${{ inputs.token_action }}
     - ${{ inputs.repos }}
